# lambdapi

./: Interpreter.hs  LambdaPi.hs  Parser.hs  Printer.hs  PrinterLP.hs  README.md  Term.hs  cleanup.hs  lambdapi.cabal
