name:               lambdapi
version:            0.2
synopsis:           Interpreting and typechecking a dependent lambda calculus.
description:
            Löh et al.'s <http://www.andres-loeh.de/LambdaPi/ tutorial implementation> of the lambda-pi-calculus, modernized.
author:             Nguyễn Lê Thành Dũng
cabal-version:      >= 1.6
build-type:         Simple

source-repository head
  type:     git
  location: git://github.com/nguyentito/lambdapi.git

executable lambdapi
    main-is:        Interpreter.hs
    ghc-options:    -main-is Interpreter
    build-depends:  base, containers, mtl, parsec >= 3.0, readline, pretty

